--- a/index.html
+++ b/index.html
@@ -803,7 +803,7 @@
       <div class="product-grid">
         <div class="product-card">
           <div class="card-image">
-            <img src="./images/ready to cook.png" alt="Ready-to-cook Instant Mixes">
+            <img src="./images/readytocook.jpg" alt="Ready-to-cook Instant Mixes">
             <span class="badge">11+ varieties</span>
           </div>
           <div class="card-content">
@@ -815,7 +815,7 @@
 
         <div class="product-card">
           <div class="card-image">
-            <img src="./images/soupmix.png" alt="Instant Soup Mix">
+            <img src="./images/soupmix.jpg" alt="Instant Soup Mix">
             <span class="badge">3+ flavors</span>
           </div>
           <div class="card-content">
@@ -839,11 +839,11 @@
 
         <div class="product-card">
           <div class="card-image">
-            <img src="./images/instant.png" alt="Instant">
+            <img src="./images/readytoserve.jpg" alt="Instant">
             <span class="badge">4+ products</span>
           </div>
           <div class="card-content">
-            <h3>Instant</h3>
+            <h3>Ready to Serve</h3>
             <p>Ready-to-use mixes for soups, snacks, and more.</p>
             <a href="shop.html?category=instant" class="explore-link">Explore Category →</a>
           </div>
@@ -851,7 +851,7 @@
 
         <div class="product-card">
           <div class="card-image">
-            <img src="./images/herbal.png" alt="Herbal Products">
+            <img src="./images/herbal.jpg" alt="Herbal Products">
             <span class="badge">4+ products</span>
           </div>
           <div class="card-content">
