--- a/shop.html
+++ b/shop.html
@@ -729,7 +729,7 @@
     <button class="filter-btn" data-category="readyToCookMixes">Ready-to-Cook Instant Mixes</button>
     <button class="filter-btn" data-category="instantSoup">Instant Soup Mix</button>
     <button class="filter-btn" data-category="idliPodi">Idli Podi's</button>
-    <button class="filter-btn" data-category="instant">Instant Products</button>
+    <button class="filter-btn" data-category="instant">Ready to Serve</button>
     <button class="filter-btn" data-category="herbal">Herbal Products</button>
   </div>
 
